2005-09-25  Esteban Sanchez  <esteban@steve-o.org>

	* src/buoh-window.c:  Save the toolbar status in gconf when changed.
	Show or hide toolbar on init based on this key. 

	* data/Makefile.am, configure.in: Added gconf support for installing
	the schemas.
	
	* data/buoh.schemas.in: Added.

2005-09-23  Esteban Sanchez  <esteban@steve-o.org>

	* src/buoh-comic-manager-date.c: Include cleanup, remove some ugly and
	duplicated code.

	* src/buoh-comic-manager.h: Better indentation of functions
	declarations.

2005-09-23  Esteban Sanchez  <esteban@steve-o.org>
	
	* data/comics.xml: Added property "first" to the date comics. Cleaned
	some abandoned comics.
	
	* src/buoh-comic-manager-date.[ch]: Added code to get_first and 
	is_the_first functions. Added method to set the first date of a comic.

	* src/buoh-comic-manager.c: Changed buoh_comic_manager_compare() to
	compare the comics date instead of the comic id. Added get_first
	method.

	* src/buoh-window.c: Added code to go_first and go_last methods.

	* src/buoh.c: Read the first property in the XML comics file. Fixed a
	leak.

2005-09-21  Pablo Arroyo <zioma@linups.org>

	* src/buoh-window.c: Defined minimun width to the comic list treeview.

2005-09-21  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-comic-loader.c: Proxy support

2005-09-20  Carlos Garcia Campos  <carlosgc@gnome.org>

	* src/buoh-view-comic.c: Allow scrolling on the comic view with arrow
	keys. Reset the scrollbars value before every comic loading

2005-09-20  Esteban Sanchez <esteban@steve-o.org>

	* configure.in: Dependency of libsoup relaxed to 2.2

	* src/buoh-view.c, src/buoh-window.c, src/main.c,
	data/buoh.desktop.in: Rename and give consistency to the program name
	"Buoh online comics reader"

2005-09-20  Carlos Garcia Campos  <carlosgc@gnome.org>

	* configure.in: Remove glade dependencies and add libsoup

	* src/buoh-comic-loader.[ch]: Use libsoup instead of gnome-vfs
	
2005-09-19  Carlos Garcia Campos  <carlosgc@gnome.org>
