@@ -31,12 +31,14 @@ GLIB_REQUIRED=2.7.0
 LIBGNOMEUI_REQUIRED=2.6.0
 GTK_REQUIRED=2.7.0
 LIBSOUP_REQUIRED=2.2.0
+GCONF_REQUIRED=2.2.0
 
 PKG_CHECK_MODULES(BUOH, 
 		  glib-2.0       >= $GLIB_REQUIRED
 		  libgnomeui-2.0 >= $LIBGNOMEUI_REQUIRED 
 		  gtk+-2.0       >= $GTK_REQUIRED 
-		  libsoup-2.2    >= $LIBSOUP_REQUIRED) 
+		  libsoup-2.2    >= $LIBSOUP_REQUIRED
+		  gconf-2.0      >= $GCONF_REQUIRED) 
 AC_SUBST(BUOH_CFLAGS)
 AC_SUBST(BUOH_LIBS)
 
